First end-to-end working build with Java8+